--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/MoiBack-2.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/avatar_photo.jpg" alt="" /></a>
 					<h1><strong>Dr Thibaut François</strong><br />
 					Postdoctoral Research Associate<br />
 					at the University of Surrey.</h1>
