--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<ul class="actions buttons-group">
  						   <li><a href="#myResearch" class="button">My Research</a></li>
  						   <li><a href="#publications" class="button">Publications</a></li>
- 						   <li><a href="documents/CV_Thibaut_Francois.pdf" class="button third-button" target="_blank">CV</a></li>
+ 						   <li><a href="documents/CV_TF.pdf" class="button third-button" target="_blank">CV</a></li>
 						</ul>
 
 					</section>
