--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/x-icon" href="images/favicon_io/android-chrome-512x512.png">
+		<link rel="icon" type="image/x-icon" href="favicon.png">
 	</head>
 	<body class="is-preload">
 
