--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/x-icon" href="favicon.png">
+		<link rel="icon" type="image/png" href="https://thibaut-astro.github.io/favicon.png">
+		<link rel="shortcut icon" href="https://thibaut-astro.github.io/favicon.png" type="image/x-icon">
+		<link rel="apple-touch-icon" href="https://thibaut-astro.github.io/favicon.png">
+
 	</head>
 	<body class="is-preload">
 
